syntax = "proto3";

package todo.v1;

option go_package = "github.com/jumpei00/grpc/grpcback/proto/todo/v1";

message Todo {
    string key = 1;
    string content = 2;
}

message IndexRequest {}

message IndexResponse {
    repeated Todo todos = 1;
}

message ShowRequest {
    string key = 1;
}

message ShowResponse {
    Todo todo = 1;
}

message CreateRequest {
    Todo todo = 1;
}

message CreateResponse {
    Todo todo = 1;
}

message UpdateRequest {
    Todo todo = 1;
}

message UpdateResponse {
    Todo todo = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {}

service TodoService {
    rpc Index(IndexRequest) returns (IndexResponse);
    rpc Show(ShowRequest) returns (ShowResponse);
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}
